Sat Mar 13 12:17:16 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (gdk_window_reparent): Make
	this a total no-op when the new or old parent is
	destroyed. (#134230, patch from Soeren Sandmann)

	* gdk/gdkwindow.c (_gdk_window_destroy_hierarchy):
	For foreign windows in our heirarchy, call
	_gdk_windowing_window_destroy_foreign (window) and skip
	all the normal destruction logic.

	* gdk/x11/gdkwindow-x11.c gdk/win32/gdkwindow-win32.c:
	Move code to request destruction of a foreign window
	code into a separate _gdk_windowing_window_destroy_foreign().

	* gdk/x11/gdkwindow-x11.c (gdk_window_impl_x11_finalize):
	Call GDK_WINDOW_DISPLAY() on the wrapper not on the
	impl. (Also from Soeren's patch)

Sat Mar 13 10:49:46 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (_gtk_drag_dest_handle_event): For
	GTK_IS_PLUG toplevels, call gdk_window_get_origin() 
	not gtk_window_get_position, as a hackround for not
	having accurate notification of window position for
	embedded windows. (#136112, Dan Winship)

Sat Mar 13 10:34:03 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c gtk/gtktextbuffer.c: Revert last change;
	it causes problems for pastes from other applications; see
	comments in bugzilla for #81880.

Sat Mar 13 02:55:51 2004  Matthias Clasen  <maclas@gmx.de>

	Fix middle button pasting in the TextView  (#81880, reported
	by Evert Verhellen, patch by Paolo Borelli):
	
	* gtk/gtktextview.c (gtk_text_view_button_press_event): Retrieve 
	the insert mark and move the cursor to it making sure of also 
	scroll the window if needed.
	
	* gtk/gtktextbuffer.c (pre_paste_prep): Move the insert mark
	to the insertion point.

Sat Mar 13 01:38:55 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_remove): Add a remove 
	implemenatation which restores the cell_view when the custom 
	child is removed.  (#136555, Owen Taylor)

Sat Mar 13 00:07:51 2004  Matthias Clasen  <maclas@gmx.de>
